Change hat photo and fix descript on mobile.

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ li {
 @media screen and (max-width: 768px) {
     #product-div div {
         float: none;
-        margin-left: 10%;
+        margin-left: 0%;
     }
 }
 
